--- a/openshift/templates/issuer-api/issuer-api-build.yaml
+++ b/openshift/templates/issuer-api/issuer-api-build.yaml
@@ -50,23 +50,23 @@ objects:
           memory: ${MEMORY_LIMIT}
       triggers:
         - type: ConfigChange
-  - kind: NetworkSecurityPolicy
-    apiVersion: secops.pathfinder.gov.bc.ca/v1alpha1
-    metadata:
-      name: pods-to-external-network
-      labels:
-        name: pods-to-external-network
-        env: ${ENV_NAME}
-    spec:
-      description: 'Allow the builds to access the internet.
+  # - kind: NetworkSecurityPolicy
+  #   apiVersion: secops.pathfinder.gov.bc.ca/v1alpha1
+  #   metadata:
+  #     name: pods-to-external-network
+  #     labels:
+  #       name: pods-to-external-network
+  #       env: ${ENV_NAME}
+  #   spec:
+  #     description: 'Allow the builds to access the internet.
 
-        This only needs to be specified once per environment.
+  #       This only needs to be specified once per environment.
 
-        '
-      source:
-        - - $namespace=${NAMESPACE_NAME}-${ENV_NAME}
-      destination:
-        - - ext:network=any
+  #       '
+  #     source:
+  #       - - $namespace=${NAMESPACE_NAME}-${ENV_NAME}
+  #     destination:
+  #       - - ext:network=any
 parameters:
   - name: NAME
     displayName: Name
