--- a/openshift/templates/issuer-wallet/issuer-wallet-build.yaml
+++ b/openshift/templates/issuer-wallet/issuer-wallet-build.yaml
@@ -46,7 +46,7 @@ parameters:
     displayName: Name
     description: The name assigned to all of the resources defined in this template.
     required: true
-    value: issuer-kit-wallet
+    value: wallet
   - name: APP_NAME
     displayName: App Name
     description: Used to group components together in the OpenShift console.
