--- a/openshift/templates/issuer-agent/issuer-agent-build.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-build.yaml
@@ -45,7 +45,7 @@ parameters:
     displayName: Name
     description: The name assigned to all of the resources defined in this template.
     required: true
-    value: agent
+    value: issuer-kit-agent
   - name: APP_NAME
     displayName: App Name
     description: Used to group components together in the OpenShift console.
