--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -367,7 +367,7 @@ objects:
               namespace: ${IMAGE_NAMESPACE}
 
   # - kind: NetworkSecurityPolicy
-  #   apiVersion: secops.pathfinder.gov.bc.ca/v1alpha1
+  #   apiVersion: secops..apps.silver.devops.gov.bc.ca/v1alpha1
   #   metadata:
   #     name: custom-${APP_NAME}-${NAME}${SUFFIX}-to-external-network
   #     labels:
@@ -422,7 +422,7 @@ parameters:
     displayName: Application Hostname
     description: The exposed hostname that will route to the public service endpoint, if left blank a value will be defaulted.
     required: false
-    value: issuer-kit-agent.pathfinder.gov.bc.ca
+    value: issuer-kit-agent..apps.silver.devops.gov.bc.ca
   - name: ADMIN_APPLICATION_DOMAIN
     displayName: Admin Application Hostname
     description: The exposed hostname that will route to the admin service endpoint, if left blank a value will be defaulted.
@@ -465,7 +465,7 @@ parameters:
     displayName: Agent endpoint
     description: The endpoint of the agent
     required: true
-    value: https://issuer-kit-agent.pathfinder.gov.bc.ca
+    value: https://issuer-kit-agent..apps.silver.devops.gov.bc.ca
   - name: WEBHOOK_URL
     displayName: Webhook URL
     description: The webhook endpoint
@@ -574,7 +574,7 @@ parameters:
     displayName: Tails Server Base Url
     description: The base URL for the Tails Server.
     required: true
-    value: https://tails-server-dev.pathfinder.gov.bc.ca
+    value: https://tails-server-dev..apps.silver.devops.gov.bc.ca
   # ===============================================================================
   - name: CPU_REQUEST
     displayName: Resources CPU Request
