--- a/openshift/templates/issuer-api/issuer-api-build.yaml
+++ b/openshift/templates/issuer-api/issuer-api-build.yaml
@@ -51,7 +51,7 @@ objects:
       triggers:
         - type: ConfigChange
   # - kind: NetworkSecurityPolicy
-  #   apiVersion: secops.pathfinder.gov.bc.ca/v1alpha1
+  #   apiVersion: secops..apps.silver.devops.gov.bc.ca/v1alpha1
   #   metadata:
   #     name: pods-to-external-network
   #     labels:
@@ -73,7 +73,7 @@ parameters:
     description: The name assigned to all of the objects defined in this template.  You
       should keep this as default unless your know what your doing.
     required: true
-    value: issuer-api
+    value: issuer-kit-api
   - name: APP_NAME
     displayName: App Name
     description: Used to group components together in the OpenShift console.
@@ -88,7 +88,7 @@ parameters:
     displayName: Namespace Name
     description: The name of the namespace being deployed to..
     required: true
-    value: nnfbch
+    value: 4a9599
   - name: ENV_NAME
     displayName: Environment Name
     description: Environment name.  For the build environment this will typically
