--- a/openshift/templates/issuer-web/issuer-web-deploy.yaml
+++ b/openshift/templates/issuer-web/issuer-web-deploy.yaml
@@ -242,7 +242,7 @@ objects:
         name: ${NAME}${SUFFIX}
         weight: 100
   # - kind: NetworkSecurityPolicy
-  #   apiVersion: secops.pathfinder.gov.bc.ca/v1alpha1
+  #   apiVersion: secops..apps.silver.devops.gov.bc.ca/v1alpha1
   #   metadata:
   #     name: custom-${APP_NAME}-${NAME}${SUFFIX}-policy
   #     labels:
@@ -392,11 +392,11 @@ parameters:
     description: The port used by the API service.
     required: true
     value: '8080'
-  - description: The exposed hostname that will route to the service, e.g., myappname.pathfinder.gov.bc.ca,
+  - description: The exposed hostname that will route to the service, e.g., myappname..apps.silver.devops.gov.bc.ca,
       if left blank a value will be defaulted.
     displayName: Application Hostname
     name: APPLICATION_DOMAIN
-    value: issuer-kit.pathfinder.gov.bc.ca
+    value: issuer-kit..apps.silver.devops.gov.bc.ca
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
