--- a/openshift/templates/backup/backup-deploy.yaml
+++ b/openshift/templates/backup/backup-deploy.yaml
@@ -3,6 +3,35 @@ apiVersion: v1
 metadata:
   name: ${PREFIX}${NAME}-deployment-template
 objects:
+  - kind: NetworkPolicy
+    apiVersion: networking.k8s.io/v1
+    metadata:
+      name: ${NAME}
+      labels:
+        name: ${NAME}
+        app: ${APP_NAME}
+        env: ${TAG_NAME}
+    spec:
+      description: |
+        Allow the backup to access targeted pods.
+      ingress:
+        - from:
+            - podSelector:
+                matchLabels:
+                  role: ${ROLE}
+                  app: ${APP_NAME}
+                  env: ${TAG_NAME}
+              namespaceSelector:
+                matchLabels:
+                  name: ${NAMESPACE_NAME}
+                  environment: ${TAG_NAME}
+          ports:
+            - protocol: TCP
+              port: 5432
+      podSelector:
+        matchLabels:
+          backup: "true"
+          env: ${TAG_NAME}
   - kind: PersistentVolumeClaim
     apiVersion: v1
     metadata:
@@ -215,6 +244,11 @@ parameters:
       Policies
     required: true
     value: backup-container
+  - name: NAMESPACE_NAME
+    displayName: Namespace Name
+    description: The base namespace name for the project.
+    required: true
+    value: e79518
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
