--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -207,6 +207,10 @@ objects:
             app-group: ${APP_GROUP}
             role: ${ROLE}
             env: ${TAG_NAME}
+          annotations:
+            description: Defines how to deploy the ${NAME}${SUFFIX} server
+            app.openshift.io/connects-to: >-
+              [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"wallet${SUFFIX}"}]
         spec:
           volumes:
             - name: ${NAME}${SUFFIX}-tails
