--- a/openshift/templates/issuer-web/issuer-web-deploy.yaml
+++ b/openshift/templates/issuer-web/issuer-web-deploy.yaml
@@ -41,6 +41,10 @@ objects:
         role: ${ROLE}
         env: ${TAG_NAME}
       name: ${NAME}${SUFFIX}
+      annotations:
+        description: Defines how to deploy the ${NAME}${SUFFIX} server
+        app.openshift.io/connects-to: >-
+          [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"wallet${SUFFIX}"}]
     spec:
       replicas: 1
       selector:
