--- a/openshift/templates/controller/controller-deploy.yaml
+++ b/openshift/templates/controller/controller-deploy.yaml
@@ -58,7 +58,7 @@ objects:
                   environment: ${TAG_NAME}
           ports:
             - protocol: TCP
-              port: 5000
+              port: 8080
       podSelector:
         matchLabels:
           role: ${PREFIX}${ROLE}
@@ -203,7 +203,7 @@ objects:
     spec:
       storageClassName: ${PERSISTENT_VOLUME_CLASS}
       accessModes:
-        - ReadWriteOnce
+        - ReadWriteMany
       resources:
         requests:
           storage: ${PERSISTENT_VOLUME_SIZE}
